# quantitative-learning

./: README.md  main.py  pyproject.toml
introductory-econometrics/: README.md
introductory-econometrics/chapter-1/: chapter-1-computer-exercises.ipynb  chapter-1-notes.md
investment-management-with-python-and-ml/: README.md
tooling/excel_python/: hello_world.py  hello_world.xlsx  xlwings.conf
tooling/excel_python/hello_world/: hello_world.py  hello_world.xlsm
