[project]
name = "quantitative-learning"
version = "0.1.0"
description = "This project will hold my workings on books or courses around quantitative finance"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
]
